# Rust-10k-Matrix

./: Cargo.toml  README.md
src/: main.rs
