[package]
name = "matrix_10k_test"
version = "0.1.0"
authors = ["STBoyden <stboyden@stboyden.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.7", features = ["small_rng"]}
# rand = "0.4"
rayon = "*"
rand_xorshift = "0.2"


[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
