[package]
name = "matrix_10k_test"
version = "0.1.0"
authors = ["STBoyden <stboyden@stboyden.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.7", features = ["small_rng"]}
# pcg_rand = "0.11.1"
# rand = "0.4"
oorandom = "11.1.2"
rayon = "*"
crossbeam = "0.7"
rand_xorshift = "0.2"
lazy_static = "1.4"
num_cpus = "*"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.release]
opt-level = 3
lto = true

[profile.release.build-override]
opt-level = 3
